Change 'Login' to 'Sign In'

--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Sign In{% endblock %}
 
 {% block head %}
   {% parent %}
@@ -33,7 +33,7 @@
             <input type="password" name="password" class="form-control" placeholder="Password" />
           </div>
           <div class="form-group">
-            <button class="btn btn-success" type="submit">Login</button>
+            <button class="btn btn-success col-xs-12" type="submit">Sign In</button>
           </div>
         </form>
       </p>
