Add 'Coming Soon' to notifications page

--- a/views/notifications.html
+++ b/views/notifications.html
@@ -14,7 +14,11 @@
 {% block content %}
 
 <article>
-    Tell us what type of dog that you're looking for and we will notify you when one is available.
+  <h2>Coming soon!</h2>
+  <p>
+    Tell us what kind of dog you are looking for and we will
+    send you a notification when it is available.
+  </p>
 </article>
 
 {% endblock %}
