Add 'Coming Soon' page for reservations

--- a/views/favorites.html
+++ b/views/favorites.html
@@ -28,7 +28,7 @@
           </p>
           <a href="#" class="favorite-item btn btn-primary col-xs-12">View</a>
 
-          <a href="#" class="favorite-item btn btn-success col-xs-12">Reserve</a>
+          <a href="/reservation" class="btn btn-success col-xs-12">Reserve</a>
         </div>
         <div class="clearfix visible-xs"></div>
       </a>
