--- a/views/info.html
+++ b/views/info.html
@@ -26,7 +26,7 @@
 		<div class="pet-age-sex"></div>
 		<div class="pet-breed"></div>
 		
-		<a id="reserve-pet" class="col-xs-12 btn btn-success btn-lg" href="#">Reserve</a>
+		<a id="reserve-pet" class="col-xs-12 btn btn-success btn-lg" href="/reservation">Reserve</a>
 	</article>
 
 	<hr />
